# morphy

./: fio2.csv  p_test.py  phrasy.py  pk_wordforms.sql  pyproject.toml  result.csv  test.py
morphy/: __init__.py  morphy.py  rules.json  settings.py
